### 02-Apr-2016 - MLS - Version 3.4.1
    - Fixed logic brackets in subarray prescan bias call which didn't explicitly do the gain correction in the if loop, see Issue #55
    - Fixed double statement, see Issue #63
    
### 28-Sep-2016 - MLS - Version 3.4
    - Fixed memory allocation around one more print

### 26-Sep-2016 - MLS - Version 3.4
    - Fixed memory allocation around prints

### 20-Sep-2016 - MLS - Version 3.4
    - Moved the init for the CTE params back to the top of the code, it had gotten moved below the header update for the information

### 14-Sep-2016 - MLS - Version 3.4
    - CTE subarrays enabled for user supported subarrays with physical overscan

### 06-Sep-2016 - MLS - Version 3.4
    - Sink pixel flagging for subarray appears correct now

### 18-July-2016 - MLS - Version 3.4
    - CTE and Sink Pixel implementation for subarrays submitted by Brechmos for review

### 28-Jan-2016 - MLS -- Version 3.3
    - Removed the call to WF3Dth for the CTE data. This is essentially useless since the DTH step has been replaced with astrodrizzle, the only function it has it to concatina
te the SPT files from the association members into a new spt file with the product/subproduct name. This is already done for the non-cte processed data, there is no difference
 between the cte and non-cte SPT files, they are only related to the RAW input file.

### 22-Jan-2016 MLS -- Version 3.3
    - Noticed I missed renaming the crc file with the call to WF3DTH and was setting the input to the crj suffix, but also needed updates to GetAsnTable to include crc filename population for subproducts and sending the correct subproduct through processing, it was always using crj
    - some code cleanup as I went
    - trailer file concatination update, but it's still not entirely correct

### 19-Jan-2016 MLS -- Version 3.3